# ChangeLog for dev-python/sleekxmpp
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/sleekxmpp/ChangeLog,v 1.6 2014/06/25 07:43:06 idella4 Exp $

  25 Jun 2014; Ian Delaney <idella4@gentoo.org> sleekxmpp-1.3.0.ebuild:
  bump; add py3.4 pypy

*sleekxmpp-1.3.0 (19 Jun 2014)

  19 Jun 2014; Tim Harder <radhermit@gentoo.org> +sleekxmpp-1.3.0.ebuild:
  Version bump.

*sleekxmpp-1.2.5 (06 May 2014)

  06 May 2014; Tim Harder <radhermit@gentoo.org> +sleekxmpp-1.2.5.ebuild:
  Version bump.

*sleekxmpp-1.2.0 (10 Feb 2014)

  10 Feb 2014; Tim Harder <radhermit@gentoo.org> +sleekxmpp-1.2.0.ebuild:
  Version bump, add crypt use flag for XEP-0027 support using
  dev-python/python-gnupg.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> sleekxmpp-1.1.11.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

*sleekxmpp-1.1.11 (23 Apr 2013)

  23 Apr 2013; Tim Harder <radhermit@gentoo.org> +sleekxmpp-1.1.11.ebuild,
  +files/sleekxmpp-1.1.11-tests-exit-code.patch, +metadata.xml:
  Initial import, ebuild by me (bug #354849).