@@ -6,16 +6,22 @@ DIST sleekxmpp-1.1.11.tar.gz 1303266 SHA256 f28e7de712dac23aff0ab5ff420da28dcd3b
 DIST sleekxmpp-1.2.0.tar.gz 1013516 SHA256 88011acc1a2b8387d052d305521f7d3162c986dbc8cfad95654282f074731eb6 SHA512 9acd45206a9d8c70563cea06564a97826a66626c7c17274764e67d34415df55f7b013f37e7adea4833ab3e7d0f9d94ca1c2c32ea63750232897d1a8b79e5be89 WHIRLPOOL 2db3533b2655df9c8bb7efa40d077136c79c107fb4b793484df9f53f6a07a71440a58c23b06476b0508aef7cf533bc7b53a9fb2c37a9b2cf9e972c0d2a1cb809
 DIST sleekxmpp-1.2.5.tar.gz 1013583 SHA256 c7c074bf3380ec9c600e77cb81a652bace1a2817ed46ecf415a3f4d30a171ac3 SHA512 7c0a360e79ece85cdade89cdfc71aa28ee2b4b22d3fc97ecb7903d4befe77f838bfc2f53c9dd50c279606edf5e7345634a25c52e87ebb9b0618daa05d1bbf4b3 WHIRLPOOL defb2a0ea78500cd85fd3bdc579a157b9ccb72b25f328bbc18f00f22f557d3b102df85f9f225e507c58fd085b76c1fcef3f6a2fc627ac6c14cada8d40c8d940a
 DIST sleekxmpp-1.3.0.tar.gz 1013915 SHA256 1665b42ed489c7f0411b466172b72752a6caeeb19310314763b447d9a31980e8 SHA512 e48a9b8da8bfbcd97ed372b7fafab82727851f1b1a09870c652dbbdbd6d529d6da26c5778e3d23e2f67aa837713ac14475f9c2cbca708153c3d06960e8cbe53b WHIRLPOOL c7e8a771f015f8f1adfa1e15f4799d55d9590db668a8ddd10065353a793ea93dabe1b8f921d31246934d57de24fad12692ec7fbdecf505116efd618fa4c4a078
+DIST sleekxmpp-1.3.1.tar.gz 1014004 SHA256 72f2887ccb29bd53f9bbf09225274d11d75e88507ea3ddee97cef0b289bcb04f SHA512 1f3c68672536da0d20cd8717f7835096003019f03a05fb08ce87f784b0636d781aa78691ee54927d4755e71a57956972af0a653deb6eff0f7eb16b9a236baa65 WHIRLPOOL 464de44bff78c294d35c01b89319b82bb6f782269c0b880ddb2692b85b0e05ed5ab47e0acb3476187c10440f3bb77f1487f6795a6a08dd6f34cdcfdf8a5ff6cb
 EBUILD sleekxmpp-1.1.11.ebuild 747 SHA256 d3ed31ca8ff353eb8c7168d5fbe8d5879756a858e6bd79f586b2a5cd87cd9e87 SHA512 1b0dd3b8ae2e06689b4168ec367e81edea2637efe37ce34347b5fb07cba1c3b7ebf9a7e637e134dfef09e4597eea52088b162bd3fca83885d9c43e523e992bc8 WHIRLPOOL b0f32a2d19779adf05a29f2c37e00ceb26762092567132dd500ebafc4d94195e48dd990b72920daa848118b1c3436bbde0639b5b51d8d92fee55803c6197566c
 EBUILD sleekxmpp-1.2.0.ebuild 764 SHA256 00e1014a0cdae10344e957675b88c1439264be638b1c1883647ce92d5673d760 SHA512 67c0ef673ce4bcbccdd3b15f4a4808b7bc45ac5549e9859e36c14e10048a86035853c35c2805ea82a76a347138be5cd9bc51077f5cd92d525915dc48bd63e4f6 WHIRLPOOL 495c8be9aee5b394026ade6c1154c832820bcb627cf53086d72344bcb52674d0a340aa80aefbe68ac0adb9307ff4bc6b6bb6331ff5d179b1da5175924b3cad35
 EBUILD sleekxmpp-1.2.5.ebuild 764 SHA256 406b9767fd9d317fdd78d95afbe4ea353a5b0d2c56bb3f74581d69e2fbe434c3 SHA512 31760bedc06b8d2a5faa941ccd6cfd07b3bc431977632de4bbee4dc4ffa5628f47eae4ca088294923756d9fa4729eaffbef40b95dde4b8f274b70a923a4a4f79 WHIRLPOOL 7bebc35710b346534c45656b965aec743722d2181477b74842510d0d9d46d620396fdb3bec28fa1b3a17af1dbb92b4c28a93d2f1835011c2841073c1f900849b
 EBUILD sleekxmpp-1.3.0.ebuild 767 SHA256 3f74a2ad42db9be897ba4c2830a38cdc3cafe7b843794e07b3f222b1e04d27be SHA512 7d4cb8324bb47dca8824a80a676dbbc0af1f6225fed231fdad2552d5183ae454a674242fc8e514da94dd8dc503d6d947d037787e3ec823b682b6e47f088e76ec WHIRLPOOL a9f7703212593d60d4b64f7e01e4683b8f7059ad6c8a9e16a635c3e09c942540d4cfcff8fa8d0d15abd8834b13c0178c1f7ae8db97ba830c92f0ddfb02171087
-MISC ChangeLog 1097 SHA256 0dceead5198595a9f5d8d0d8f98c8e9499816cbc79f8ebf01f38eaf8dd541042 SHA512 bdd186706593c19f8547694ce19655ea7cfa96d32ac5c43c31acaa113ed41af33c44eaf3447e3ae8db17e9f571a232c9d77daf6bc8c61b42ea75faf25d50e9f5 WHIRLPOOL 8b14ab1394ac0f1724f0ff483777b9e97ebcfa26906aec101f1939084e2c05ec07d119f6fddd2b9b1a0f8f623c92b96b2b400df49828a9cc044eb26c0c3f18ba
+EBUILD sleekxmpp-1.3.1.ebuild 765 SHA256 a154b83a3bc46815f0dbae09f16f149717159bddada43baa7e81ad381d046519 SHA512 d09e46370825741951fa937c6780627a664f0630e27f99abd8cabe6565c3deea0d09ffeca841caef2acb0b1f65e13b285a87817119eb5980f96c29664aa14a47 WHIRLPOOL 465c8d4fea7b075bcdec67003091b06bb56196b7eea283b1e1bab35ece6576017925d7edc5906af36261b6843fb8e69eb8c3686c4b16d6ff3b8c83c451ac9479
+MISC ChangeLog 1222 SHA256 521ae728c2bcc3e3a7dea1cb0175748e2ea95bbc7aefdc8f27410a6d91cdcefb SHA512 cf0401b23bdbee423161623eda9593925e9f58e15a5f9b936ca7e88d5613509765cb1fc8a61f9904e3316b82fd0bf823a2318b27b29d66a9ac90c273e6387b14 WHIRLPOOL 89c499f3c504b9f264dbecd4ad1d03de87dd93c603b7de6088b97041e6853dd98b10ee0378ac51e4023ce264a6357a12371739c37106cbee88692a05172f143e
 MISC metadata.xml 345 SHA256 e0d3b481e2dfce72384d72aa39ea46780a408a8606002d477ef21781bb799591 SHA512 d26b8f47ea59517445efcbd837345677d188df238c85e532fb9c9a709aa29550b78e06eff5220162c625d3e7d3cfcb80a8180b408c9a0301fca88feb294a47db WHIRLPOOL af2675f6bbf1693c490a9fe976831063388e3c4ddd357ecb9ef907defcdfc1f277b2b16388d82101642b870ba3698d41d78271c05a6d4039e81cf3cb9849fda8
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlOqe6IACgkQso7CE7gHKw03hgCgzoNSOSfRhzdzKciDlvbJAxMI
-v9gAoJhVHuQdM7SrAR/7M5N6yuXZNO7v
-=Xmpn
+iQEcBAEBCAAGBQJUNJIFAAoJEEqz6FtPBkyjfbQH/1NWQ+1W9T4WTyTKGI520kzO
+QTYN4Z5iAaBeU+BwtooslT3JABm9Z2ElViJ6SfeW5BhsWU9CKjXmVr0wob8TYcCF
+22cvT/ihnQCqT33QsoqSAw9oIUCBz0lleFFegpE3qrCCAMQHyQZmqzASKV2TZXWb
+XrKOC9Clq70pU5gQYMpINw3PMxF2S9OPDB0TITL9JLtruO+GpB8pvy96xK2VqUb3
+2GrRPhzEI1yNsbl8KbD1lutVE5U2qZ1xn12R/EpbJkgOpLcbjgRrKHGfA5zHkfrG
+ypDOcf/okX6TuIaExLjdaFta81KDFBQwCwbDQEjzrhlKen3iLDb8NESL++zbzGU=
+=mnn6
 -----END PGP SIGNATURE-----
