@@ -2,17 +2,19 @@
 Hash: SHA256
 
 DIST umockdev-0.8.2.tar.xz 733196 SHA256 8d7dad9ec6f9105773d1bb57eb844310e7a05ba850c0f28b9b520f848b2a2719 SHA512 a7674abcde7f570d92da4e54bbe7448ffde99515577c05664ea11ed45dcab7345e62b96d42f6e851b8dc5199dfaf7955a54156ae4bc9ffc983a5ccf312755514 WHIRLPOOL 0774f85f09d6e2d03fd500143a0b56a31cbda561e693b46b236d8641f336edc91d05206a36f408911baddce42c9a0aede9a4d6a71830b2e0f17a0859170ba028
+DIST umockdev-0.8.8.tar.xz 741304 SHA256 51fb5f81d895f99c3a3d81a18356db7e6d2cd075732477d8d4be4ffd97817e3f SHA512 5a8991111a7a108e965e4e1446c050dc544ddf7dc4a35db7374be0373b0f74415b3bcc1192547ce32a91ed91e373f5b750adb18a4c4efc2c587f9d03625d417c WHIRLPOOL c2c8dc304dcafbee9dfb8047a41b71ed1ee36905d7a0bcbe46fb2a67110580279bf5ff293636d2030e6cd43f4ab4ee885be76a3c44c76469967d10e1e7867dde
 EBUILD umockdev-0.8.2.ebuild 747 SHA256 151b8652533d8fd3157dfb486dd40fa2b7a3cac70371cbbe48eaed9e51380f72 SHA512 84a60b1254d3bbdfacfe4dbe048614cc7e9dd773eac18e9525335602908b3f5f15d18ddbe815c15a3a8cf1611fdfb8f041bea8c8fb85f65c8a61114912484c0b WHIRLPOOL f0376f8353af7b8d69692c363bf3ef12a3df2e587c08c7c5aeb8402cdbde54a8a0248409e43a8be0e04df87a727d9bfc9bb984acdb238ac12108694cb5c854e5
-MISC ChangeLog 3246 SHA256 e8f4b79c1ec61e5c8f44833c87694c465f1f10f55abf92cef2c1c693a9b1517a SHA512 cfa8acf56ffe4f4eab9409466494eaa414a542766dea5bada3e68d6fcf710f509bfbb36b2c32dbc950d4ce4071ad4d920893627aecc5e53c4a969d2b03704488 WHIRLPOOL ae1273f411d1c6f8691c630dc55c1bf9869bfbcdb697d86e55ea8a22754720f488964d81d85897581711bf843209b754b0b5bad2c78da5d32ea134925a81771d
+EBUILD umockdev-0.8.8.ebuild 743 SHA256 db9c28e9f3e23b7c483e25ac89f195c5a23cd0f8547022e119df0837d4e97033 SHA512 f0bcf5001c7f30e3dc207b9e99cf30c9372c31eb3fcbaff03652b20697ce527056166c3c9ece56a8e1b40c198317f0320381118fa5362e08897c043f5dd82b29 WHIRLPOOL a025d7c836851a7c7db2523794c8811c4c464ee016a3b22ad9bcf0764ffabfb55adc3b004d1fca02e1cdff203ef2d7e9088e34045a34c691abf08542b9eaabe3
+MISC ChangeLog 3367 SHA256 40959aab2aad995291638ca3492c888cfaa0c9b14a9b199e32f8ef739023b35b SHA512 1eca65f53ec5a932bfb6135d0910fac2a928987d6c625dc12569192353b3fa4dbc35f40f02655343980c0bd57483981ddb27002e0a180bdadc72c2a43f528449 WHIRLPOOL 9fb62d646b981a2b0f0de8a4e639fe7d7ffaaccd579455b2920168437e6a4b9d23759c574c73e5b6caac07ad3ad4ab2fa1d0524b782dc9553684d7ca7a25df2a
 MISC metadata.xml 232 SHA256 a778e40f66cb2fa35529e4f45cb8356c8b1b109163cd939396f02e8ea6aa5f1a SHA512 6952f63da1c92a4ed7ddb87b5eb4003d123f0b7af6ffdbc9118159c97ddf18917e8ac7727285a42c07c64e52a40335bc2ef9f17261557617beb8c2226a391873 WHIRLPOOL 0a4441f075f8af01588da2aac3e03732f93463b8bea5e46749d37e1468452735d15f45243b930b3346c93734f8aa235a492030445fee471a95d2c5998f08e7de
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJT0UG7AAoJEEdUh39IaPFNxFQH/junNDDjXH5tgFO1kJ530FcZ
-hNcmkWjL23C4vZpI9JQELlX1+A/PL0hqBqsmYhP12WPx5VeMSwtjKHF3bAN1rtWT
-d0ZrGNO7kLVq9ZSTwWXH/GsdIg6qMwbi2Iv9Kw+YNpZNEhoGPNiV5IE4+GSqECU/
-LgXQLSraROszwvXMDU0OzCqlM3G3T1DVb3ij/NCQ6YZ4XuWcmgTqKOWNA9TCq5UH
-8945bNbVoaaCDJPxz2/IkXXZxfaX/euURjJcVUYdWSXTpC5OfxHzlb6iy5VJZ5mU
-NLsr4lwzHvLQyFgzV9rTT5bj5wPZfd60wvSA7TTV71fV4s7/SY/UkxGvzXdhNn8=
-=jQZH
+iQEcBAEBCAAGBQJUNJDmAAoJEEqz6FtPBkyjUNwH/R7vFSgpo8gLjv0Un+MQcM6W
+Ycipga1bV4VmZajc7siONdUTcnmloncmDsgrBJ8RkNWrDgQIW04kHWOSR51iRW2S
+n2GBhfnIEJ+5Lc59dl3JBFrXJ08dlgcp9YeY1t8DOhN6nFMfMYp93g8iPnCKxUI6
+F1RQJ/+cA/ah3dAacyE/T576CL99fb3eGCvfWln0yHX8ImbeUAJpCSgNKwbIyrw2
+MmRByRnDmqqQfF2SMTX5e0vCpLrYDP1Qi1QZDMixJd0fpGNHHDp3vtUE1GaLnAga
+RWhlUqMZ6dd8S+Utxr5ojBc3fATbnwGQm6FxcwSESb2lDi1h0Lt66rMXOjAUXdo=
+=vMPn
 -----END PGP SIGNATURE-----
