@@ -5,19 +5,21 @@ AUX urlwatch-xmpp.patch 5701 SHA256 bbafcdd10005b1611074c839ce3cc206d3fe8ab0f790
 DIST urlwatch-1.14.tar.gz 12969 SHA256 00095dd0e2b09ab8b5ed4b5ae615c8e80484075219f8c81e05afd5777bb1a7ab
 DIST urlwatch-1.15.tar.gz 13159 SHA256 a2d4a985c58bbf9b1f86b3a3bd1e50d54d1f9e432e00b6dad38c457b3c6d2f90 SHA512 60b7904ec10fcc20c4d3096381d26c7baf0a4a3abe4aed0a9c7b6e5de74e212a8221279438ca0e3186966f9a9ba50138ce5cbe7564b155b2d4e7ffc17e94da1e WHIRLPOOL 5563ff35d4eb624fae514d6e1228b787f2daee6d121f3983eff2c50dfef39eae5485ddaae23dd85be4399e159af472a5caf9de5567000c3929ca580292a749fa
 DIST urlwatch-1.16.tar.gz 14416 SHA256 2e382100d6c72e739fcf66712e775854bfb53a06c2f27ebe01d5719540aac179 SHA512 d9b918fb90c457d8167543107abf59feca2857bfcde8192f6740b29988fe2f27f330a49f2656f0b769c70ce3642a097d6cb7f98f56b1d167d691c15465770b9d WHIRLPOOL d58e72982267a78958e7321034fe4217f0ac92c7900e0c90cffe2686472264da7d2e069706a668ac23df470749a2431f79ec1ad63d3b35b53035371fd520dc19
+DIST urlwatch-1.17.tar.gz 14647 SHA256 006f04c124cf3dace3d071921e5ed452f6fbd463495bc8aa7879b915407c88f6 SHA512 67026913083fcc99e99cfb33a31873ac48a2ee69db34b8c13fcccc3bdd051787954cfbf3d3ef73a331c03540e254f53ba6d2661967f89de204798aaf35033cd0 WHIRLPOOL 0cade08f009e4c71c6bd8e554f9d6e34d44fa4ff18a3b91c78317599f8e3df62d9dbe3cedd75d8f85478ba8b893c4d36b69965c074312d0ea04fce8c8ca132f3
 EBUILD urlwatch-1.14.ebuild 1058 SHA256 81724a0b12069cf7827f4168e8a01954f03132ff10173a342ba7eb3636ee8e29 SHA512 882d14b9550e2b11ceec08ce6b54dd6a9edbd3cd099d187ef7cadf55bd22dc4c249302ea912ba50edbf63ef38334b31a290b621bcabe38812971b1d75360837d WHIRLPOOL 4cbad32f536665a4558fb69295d5ef2e593333ec790aa8dda145a648a3427e27d64c86e7e12089209cacc19dab9218e0a88abeb496045f8eaed13b00b4ac9cfc
 EBUILD urlwatch-1.15.ebuild 1097 SHA256 bdf3f02d205ae49d33f47fbfa9b2d70123a5431aee7ba41b0c9ae9bd6c8baa59 SHA512 5f349ef6a499cf8f92280d997dc0f20f99309e7bba45e91ee3228545e0fdf1de1b0fae13cfcdd72f33e6fdfb66f699954fca5a2caac057fd42fc2445ec6717bc WHIRLPOOL 6a83b34571fcb30fc46473830f3241f99b24bd5de37e81ba76434cc9e3330f95521670c0be67be1f31605440317797ea4ce3f1597864574d1af53d23029a6dd0
 EBUILD urlwatch-1.16.ebuild 829 SHA256 8b2eaf9b3deb049e82818e0517d12b705461f1bd352039e9a96fa1d34c0853b0 SHA512 9d60815a6d5b31f1be0c3c5ab70fa4495a39e91e6360bd88fea191c09d64e3751884937e9131c8b1848d3877e218d373e2b203ebd97955dde02c863997c2bc6a WHIRLPOOL 830a5fe4eaee91e94639fd6e4c0ca90b4d3cebd74d0693ff4b92cba98f268cee6d329c5ea36b5bae7e9467d64f59f3a6d8d1c637146f59d470bfbe50b0f30d3b
-MISC ChangeLog 1047 SHA256 15f5d3b2309c6032605a3f64a4f67d5dc88ab48cc8aaeb0f986395a5bdfacf37 SHA512 9d0cf868d8f3e6a57de0a01044e89153bbf1e1504aef6645e3e9447286953fcf8309241881aed93ebe6505832e5ea8adca6baf2ae21cf06bfaba3c9ba01044aa WHIRLPOOL 1c3e241adb4fea7aec8f59f32af4ebded747e9493d08ccd8995d981e85df1e90ba9bfaf6227041b632dcb4659a1ffd91e95b69bf408a41c7a9153884a8359a39
+EBUILD urlwatch-1.17.ebuild 821 SHA256 85c4d2979644a96ac6ea3f3bdcc845a6f4140d85a22847fdbf0ddae9e7787af0 SHA512 6c617b1efedc2a9de3a0a8bff0dd8256f2e9ff2bbf83fb59c3f63ffcc85b3206246bf5028d7b6ff64d61cdb0798688f59d18fce91867c43d21677f2b961e457a WHIRLPOOL f7245e2ed3e11189c8b0030827805f2961d90347e9c07ae50da37249a79f12ecd70cd70b2c66b052685e21ee59bc632767a7b6358597876e0a864158289fe267
+MISC ChangeLog 1166 SHA256 817f5a7b77c6bf24e9ddd14a9c2d96d588727d6787a7d9f4ac1f779b819dbc46 SHA512 8e9c96dfdacc1dee786062e7783a979dd1b97fb785a79e692ebbf83f5532aaa3c4b273c297e9b14f7dac3be1c385cd6caedd05a84a40beac05dea1bdae6af6f2 WHIRLPOOL 3c3dc3d17004b6f57a3b63124dc7bceb532d3fb6d4887073a88a4c953578650f134c3b223dc1d2160a15d40f0dfb84b0a65887cc1e9f12f6ce1e1ae96f5fc803
 MISC metadata.xml 303 SHA256 21611dcd66ea681efb5cb507d76c8adc810127448a247fbc8110a53a920a1945 SHA512 853fe511ea50c95f2a3737971dcc096e2590e2446fc1b41a6057941eec94a6af2aebfb541603d2b58573dbf9fe26fc879372772921e3f5a7bd397206d158f0c8 WHIRLPOOL 4cc94461a067533074357584ec3eceba31925d3c0dbfb920c2c442d310adc18a009253527538b87a87ea01d4d534d727fc350d5ecdc308e40b45646543a9c914
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQEcBAEBCAAGBQJTPML0AAoJEEqz6FtPBkyjklAIAJOzvjh9QedF5hA5lJXiFo9G
-poclbcF9D9uHZntxK0J6XIIrl0sF8Gm1bjqrl3lwJcH/oVz8Eku3iCPQZwYdz534
-35dLHZWiah/Y0yJWQW538GN2e+NKIfqX/2axRstaGfqrQsRc7QgKoPyttnDhddux
-wYalsO9XLBPRXwm9s4T8E5/0P20Ew0aXmE11oSf431pTE8AQLWkWJ7ZqAsX5DirP
-QLF5Xt15Dd2z3Wx2izvzs/9xujDJ7Rum0BIJaLM2fOqOsvFkxkyWNOQ8+aqtx+nq
-CBmY+swYLBoSzL60tbg/xrvHTInhduT07WcXDyk0AAk3Qih+HiRR+tKwOjUj11o=
-=IsSW
+iQEcBAEBCAAGBQJUNJFTAAoJEEqz6FtPBkyjfQsH/191AtuEcfqqowzmZMvCFOv0
+2J6rJjLYo7knOaXyGehIyiFsrPFYrsq2z1YdQxsxw3HbIQaraK0i51unemtBkje4
+qLFhJlIYsHjtb5K2usUrcTzsw4pbDDF70I7TX5vcfxq5LZSxKuLLLMj2/jucwSLi
+tX59nfhZKiOmp/9lTawXcNLTzRyGEvGTsod2g7lejgt99xaQusdd8e87siyvOpeo
+A+0i86VRdhUcewkUyffcvN6dkP43qsXBauFhLe0fydyNamX4SDeodhp2BQQdwnks
+MAwAtFlfIkUchFK3ebNRJYF4817scGQlQtDTbmlSUU8RJKJGHbAXIu3b2gqyO+8=
+=zTU2
 -----END PGP SIGNATURE-----
