@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/umockdev
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/umockdev/ChangeLog,v 1.22 2014/07/24 17:26:20 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/umockdev/ChangeLog,v 1.23 2014/10/08 01:17:57 radhermit Exp $
+
+*umockdev-0.8.8 (08 Oct 2014)
+
+  08 Oct 2014; Tim Harder <radhermit@gentoo.org> +umockdev-0.8.8.ebuild:
+  Version bump.
 
   24 Jul 2014; Samuli Suominen <ssuominen@gentoo.org> umockdev-0.8.2.ebuild:
   Use virtual/libudev and virtual/libgudev since both libraries are used, and
