@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/sleekxmpp
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/sleekxmpp/ChangeLog,v 1.6 2014/06/25 07:43:06 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/sleekxmpp/ChangeLog,v 1.7 2014/10/08 01:22:44 radhermit Exp $
+
+*sleekxmpp-1.3.1 (08 Oct 2014)
+
+  08 Oct 2014; Tim Harder <radhermit@gentoo.org> +sleekxmpp-1.3.1.ebuild:
+  Version bump.
 
   25 Jun 2014; Ian Delaney <idella4@gentoo.org> sleekxmpp-1.3.0.ebuild:
   bump; add py3.4 pypy
